deploy/k8s/overlays/aliyun/patch-backend-no-nodeselector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: xjicloud
spec:
  template:
    spec:
      nodeSelector: null
