deploy/k8s/overlays/aliyun/patch-frontend-no-nodeselector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: xjicloud
spec:
  template:
    spec:
      nodeSelector: null
