deploy/k8s/overlays/aliyun/patch-redis-no-nodeselector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: xjicloud
spec:
  template:
    spec:
      nodeSelector: null
